examples/invalid_provider_harness/invalid_max_steps.argx
module invalid.maxsteps
provider OpenAI { kind external enabled false dry_run_only true requires feature_flag requires approval }
harness H { provider OpenAI mode dry_run network denied secrets denied filesystem none max_steps 0 }
